--- a/index.html
+++ b/index.html
@@ -10,28 +10,42 @@
     <link rel="stylesheet" href="main.css">
 
 </head>
+<nav class="navbar navbar-expand-lg navbar-dark">
+    <a class="navbar-brand" href="#">CODERSCHOOL</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link active" href="#">SEND MONEY<span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link active" href="#">BUSINESS & API</a>
+        <a class="nav-item nav-link active" href="#">TOOLS</a>
+        <a class="nav-item nav-link active" href="#">RESOURCES</a>
+      </div>
+    </div>
+  </nav>
 
 <body>
-    <section class="mt-4 d-flex flex-column align-items-center justify-content-center" style="height:500px;">
-        <h3 class="align-self-center" id="prompt">The World's Trusted Currency Authority</h3>
-        <div class="d-flex flex-row align-items-center input-form">
-            <p class="text-secondary font-weight-bold p-2">From:</p>
+    <section class="container mt-4 d-flex flex-column align-items-center justify-content-center">
+        <h3 class="align-self-start text-white" id="prompt">The World's Trusted Currency Authority</h3>
+        <div class="d-flex flex-row align-items-center justify-content-center input-form">
+            <p class="font-weight-bold p-2">Amount:</p>
             <input autofocus type="number" id="amount" />
-            <p class="text-secondary font-weight-bold p-2">From:</p>
+            <p class="font-weight-bold p-2">From:</p>
             <select id="from" class="btn-secondary btn-lg btn-lg">
                 <option value="USD">USD</option>
                 <option value="VND">VND</option>
                 <option value="EUR">EUR</option>
                 <option value="JPY">JPY</option>
             </select>
-            <p class="text-secondary font-weight-bold p-2">To:</p>
+            <p class="font-weight-bold p-2">To:</p>
             <select id="to" class="btn-secondary btn-lg btn-lg">
                 <option value="VND">VND</option>
                 <option value="USD">USD</option>
                 <option value="EUR">EUR</option>
                 <option value="JPY">JPY</option>
             </select>
-            <button id="convertButton" class="btn btn-info btn-lg btn-block m-5" onclick="convertAgain()"><i
+            <button id="convertButton" class="btn btn-info btn-lg  m-5" onclick="convertAgain()"><i
                     class="fa fa-chevron-right fa-3x"></i></button>
 
         </div>
